--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,16 @@ input[type = "checkbox"] {
     display: none;
 }
 
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:#eceff1 ;
+    box-shadow: 0.5px 0.5px 10px 0.5px #000;
+    padding: 1rem 2rem;
+    position: relative;
+}
+
 /* dark-theme */
 
 .dark,
