--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,85 @@ header{
     position: relative;
 }
 
+/* centralizando o card(main) no meio da tela */
+main{
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    margin-top: 4rem;
+    display: flex;
+    width: 60%;
+    background-color: #fff;
+    
+    /* uma sombra preta, porém com opacidade */
+    box-shadow: 5px 5px 5px 0px rgba(0,0,0, 0.3);
+}
+
+.card-image,
+.card-details{
+    padding: 2rem;
+    width: 50%;
+}
+.card-image{
+    position: relative;
+    background-color: #eff7fc;
+}
+
+.card-image span{
+    font-size: 6rem;
+    font-weight: 900;
+}
+
+.card img{
+    width: 130%;
+    transform: rotate(-25deg);
+    position: absolute;
+    right: -1rem;
+    top: 10rem;
+}
+
+
+
+.card-details h2{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.subtitle{
+    color: #444;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.description{
+    line-height: 1.6rem;
+    margin-bottom: 2rem;
+}
+
+.price-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.prince{
+    font-weight: 900;
+    font-size: 2rem;
+}
+
+.btn{
+    background-color: #444;
+    width: 7rem;
+    height: 3rem;
+    border: none;
+    border-radius: 3rem;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
 /* dark-theme */
 
 .dark,
