--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,31 @@ main{
     background: #263238;
     color: #fff;
 }
+
+.dark .bi-sun{
+    display: none;
+}
+
+.dark .bi-moon{
+    display: block;
+}
+
+.dark .card{
+    background-color: #37474f;
+}
+
+.dark .card-image{
+    background-color: #273035;
+}
+
+.dark .subtitle{
+    color: #67b4f3;
+}
+
+.dark .description{
+    color: #2196f3;
+}
+
+.dark .btn{
+    background-color: #67b4f3;
+}
